--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # Dependencias
 */node_modules
 /node_modules
-/package-lock.json
-*/package-lock.json
+package-lock.json
+*package-lock.json
 
 # Archivos de entorno
 *.env
